--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 Debug
 Qt/build-ChessSys-Desktop_Qt_5_6_2_MinGW_32bit-Debug
 Qt/build-ChessSys-Desktop_Qt_5_6_2_MinGW_32bit-Release
+Qt/settings
+Qt/skin
