--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
+.*
+!.gitignore
+!.git
 *.exe
 *.o
 *.obj
 *.user
-Debug
-Qt/build-ChessSys-Desktop_Qt_5_6_2_MinGW_32bit-Debug
-Qt/build-ChessSys-Desktop_Qt_5_6_2_MinGW_32bit-Release
+Qt/*Debug
+Qt/*Release
 Qt/settings
 Qt/skin
